Added more categories, add more GIFs to the page

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <form id="form">
                 <label for="emotion-input"> Add a New Emotion! </label>
                 <input type="text" id="emotion-input">
-                <input id="add-emotion" type="submit" value="submit">
+                <button id="add-emotion" class="btn btn-dark" type="submit" value="submit"> Submit </button>
             </form>
-            <div id="gifs">
-
+            <button class="btn btn-dark" id="more-gifs"> MORE GIFS </button>
+            <div id="gifs" class='row'>
             </div>
         </div>
     </body>
