Favorites added, card added

--- a/index.html
+++ b/index.html
@@ -22,12 +22,21 @@
             <div class="row button-container">
 
             </div>
-            <form id="form">
-                <label for="emotion-input"> Add a New Emotion! </label>
-                <input type="text" id="emotion-input">
-                <button id="add-emotion" class="btn btn-dark" type="submit" value="submit"> Submit </button>
-            </form>
-            <button class="btn btn-dark" id="more-gifs"> MORE GIFS </button>
+            <div class="row favorites">
+
+            </div>
+            <div class="row">
+                <div class="col-lg-10 col-sm-8">
+                    <form id="form">
+                        <label for="emotion-input"> Add a New Emotion! </label>
+                        <input type="text" id="emotion-input">
+                        <button id="add-emotion" class="btn btn-dark" type="submit" value="submit"> Submit </button>
+                    </form>    
+                </div>
+                <div class="col-lg-2 col-sm-4">
+                    <button class="btn btn-dark" id="more-gifs"> MORE GIFS </button>    
+                </div>
+            </div>
             <div id="gifs" class='row'>
             </div>
         </div>
