Changed favorites section, localStorage implemented

--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
             <div class="row button-container">
 
             </div>
-            <div class="row favorites">
+            <div class="card">
+                <div class="card-header">
+                    Favorites
+                </div>
+                <div class="row favorites">
 
+                </div>
             </div>
             <div class="row">
                 <div class="col-lg-10 col-sm-8">
