--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
 
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <!-- Link Bootstrap -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -15,6 +17,9 @@
         <!-- Link style.css and gif.js -->
         <link rel="stylesheet" href="assets/css/style.css" type="text/css">
         <script src="assets/javascript/gif.js" type="text/javascript"></script>
+
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     </head>
     <body>
         <div class="container">
@@ -23,7 +28,7 @@
 
             </div>
             <div class="card">
-                <div class="card-header">
+                <div class="card-header favorites-header">
                     Favorites
                 </div>
                 <div class="row favorites">
